feat: add enhanced stats feature with bitrate and frame drops
Add extended statistics display showing FPS, bitrate, and dropped frames
alongside the existing FPS counter.

Changes:
- VideoRenderer.ts: Track bytesReceived, framesDropped, and bitrate calculation
- Add getExtendedStats() method returning fps, bitrate, and framesDropped
- WebviewTemplate.ts: Add extended stats styling and localization strings
- main.ts: Implement extended stats display with bitrate formatting
- ScrcpyViewProvider.ts: Send showExtendedStats setting to webview
- package.json: Add scrcpy.showExtendedStats boolean setting (default: false)
- docs/feature-enhanced-stats.md: Complete documentation of feature

The extended stats are only shown when both showStats and showExtendedStats
settings are enabled. Bitrate is calculated from actual received bytes and
displayed as Kbps or Mbps. Frame drops are detected when decoder queue
exceeds 10 frames.

--- a/l10n/bundle.l10n.json
+++ b/l10n/bundle.l10n.json
@@ -88,6 +88,7 @@
   "Failed": "Failed",
   "Failed to read file": "Failed to read file",
   "{0} FPS | {1} frames": "{0} FPS | {1} frames",
+  "FPS: {0} | Bitrate: {1} | Dropped: {2}": "FPS: {0} | Bitrate: {1} | Dropped: {2}",
   "Select APK to Install": "Select APK to Install",
   "Installing {0}...": "Installing {0}...",
   "APK installed successfully: {0}": "APK installed successfully: {0}",
@@ -110,5 +111,6 @@
   "command.toggleRecording": "Scrcpy: Toggle Screen Recording",
   "Start recording": "Start recording",
   "Stop recording": "Stop recording",
-  "Recording": "Recording"
+  "Recording": "Recording",
+  "config.scrcpy.showExtendedStats": "Show extended statistics (FPS, bitrate, frame drops)"
 }
