feat: show warning alert in empty state when tools are missing
- Add tool availability check at startup for ADB and scrcpy
- Display warning alert with install/settings buttons when tools missing
- Add new scrcpy.adbPath setting for custom ADB path
- Use pill-shaped buttons for modern appearance
- Remove VS Code notification popup in favor of inline warning alert
- Structured warning with title/subtitle layout

--- a/l10n/bundle.l10n.es.json
+++ b/l10n/bundle.l10n.es.json
@@ -91,5 +91,15 @@
   "Select APK to Install": "Selecciona el APK a instalar",
   "Installing {0}...": "Instalando {0}...",
   "APK installed successfully: {0}": "APK instalado correctamente: {0}",
-  "Failed to install APK: {0}": "Error al instalar APK: {0}"
+  "Failed to install APK: {0}": "Error al instalar APK: {0}",
+  "Missing required tools: {0}. Install them to use screen mirroring.": "Faltan herramientas requeridas: {0}. Instálalas para usar la duplicación de pantalla.",
+  "Install Instructions": "Instrucciones de instalación",
+  "Configure Path": "Configurar ruta",
+  "ADB is not installed or not in PATH": "ADB no está instalado o no está en el PATH",
+  "scrcpy is not installed or not in PATH": "scrcpy no está instalado o no está en el PATH",
+  "ADB and scrcpy are not installed": "ADB y scrcpy no están instalados",
+  "Install": "Instalar",
+  "Settings": "Ajustes",
+  "ADB not found.\n\nInstall via: {0}\n\nOr download from: {1}\n\nAlternatively, configure the path in Settings.": "ADB no encontrado.\n\nInstalar con: {0}\n\nO descargar de: {1}\n\nTambién puedes configurar la ruta en Ajustes.",
+  "scrcpy not found.\n\nInstall via: {0}\n\nOr download from: {1}\n\nAlternatively, configure the path in Settings.": "scrcpy no encontrado.\n\nInstalar con: {0}\n\nO descargar de: {1}\n\nTambién puedes configurar la ruta en Ajustes."
 }
